--- a/app/react/package.json
+++ b/app/react/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "foundation-sites": "^6.7.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
